--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,14 +152,16 @@ p.italic {
 }
 
 ul {
-    width: 750px;
-    margin: 0 0 0 30px;
+    width: 900px;
+    margin: 0 0 0 0;
+    padding: 0px;
+
 }
 
 li {
     display: inline-block;
     width: 350px;
-    margin: 50px 42px 0 0;
+    margin: 50px 120px 0 0;
     padding: 0px;
     font-size: 18px;
     line-height: 2.0;
